--- a/MainDemo.Web/Web.config
+++ b/MainDemo.Web/Web.config
@@ -29,7 +29,7 @@
     <add key="Languages" value="de;es;ja;ru" />
   </appSettings>
   <connectionStrings>
-    <add name="SqlExpressConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=.\SQLEXPRESS;Initial Catalog=MainDemo_v14.1" />
+    <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(local);Initial Catalog=MainDemo_v14.1" />
     <!--
     Use the following connection string to connect to a database on the Microsoft SQLExpress Server:
     <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=.\SQLEXPRESS;Initial Catalog=MainDemo_v14.1"/>
