--- a/MainDemo.Web/HttpModules.Web.Config
+++ b/MainDemo.Web/HttpModules.Web.Config
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <httpModules>
-	<add name="ASPxHttpHandlerModule" type="DevExpress.Web.ASPxClasses.ASPxHttpHandlerModule, DevExpress.Web.v14.1, Version=14.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+  <add name="ASPxHttpHandlerModule" type="DevExpress.Web.ASPxClasses.ASPxHttpHandlerModule, DevExpress.Web.v14.1, Version=14.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+  <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+  <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
+  <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
 </httpModules>
